wtx-macros-tests/tests/fail/mandatory_outer_attrs_are_not_present.rs
#[wtx::pkg(data_format(), id(Foo))]
mod pkg {
  #[pkg::req_data]
  struct Req;

  #[pkg::res_data]
  struct Res;
}

fn main() {
}
