wtx-macros-tests/tests/fail/mandatory_outer_attrs_are_not_present.stderr
error: All packages must have a `data_format` and an `id` attribute. For example, #[pkg(data_format(json), id(SomeApi))]
 --> tests/fail/mandatory_outer_attrs_are_not_present.rs:1:1
  |
1 | #[wtx::pkg(data_format(), id(Foo))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `wtx::pkg` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

